@@ -8,15 +8,15 @@ if (! ${HOSTNAME}) {
   $HOSTNAME=`hostname`;
 }
 print "Configuring on ${HOSTNAME}\n";
-if (${HOSTNAME} =~ m/bit\.[lbl.gov|local]/) {
+if (${HOSTNAME} =~ m/^bit/) {
   # on a Mac used by a developer, enable maintainer mode, use debug options # CC=gcc-mp-4.7 CXX=g++-mp-4.7 # CC=clang CXX=clang++
-  $cmd="./configure --prefix=${HOME}/Darwin/fastbit --enable-maintainer-mode --with-java CFLAGS='-g -O0 -Wall' CXXFLAGS='-g -O0 -Wall'";
+  $cmd="./configure --prefix=${HOME}/`uname -s`/fastbit --enable-maintainer-mode --with-java CFLAGS='-g -O0 -Wall' CXXFLAGS='-g -O0 -Wall'";
 } elsif (${HOSTNAME} =~ m/^data5[.lbl.gov]?$/) {
   # on data5, know where is java and where to install, use extra optimization
   $cmd="./configure --enable-xopt --disable-debug --with-java=/software/jdk1.7.0 --prefix=/data/john/Linux/fastbit";
 } elsif (${HOSTNAME} =~ m/^d\w+[.lbl.gov]?$/) {
   # on sdm group's linux machines, know where is java and where to install
-  $cmd="./configure --enable-xopt --disable-debug --with-java=/software/jdk1.7.0 --prefix=/fastbit/Linux/fastbit";
+  $cmd="./configure --enable-xopt --disable-debug --with-java=/software/jdk1.7.0 --prefix=/fastbit/`uname -s`/fastbit";
 } elsif (${HOSTNAME} =~ m/^hopper\w+[.nersc.gov]?$/) {
   # on hopper at NERSC, use the default GCC compilers, no debugging # Cray compilers wrappers CC=cc CXX=CC
   # print "\nPlease make sure that PrgEnv-gnu is used, for example by executing 'module swap PrgEnv-pgi PrgEnv-gnu'\n\n";
